# Automatic_E-mails

./: .env.example  .gitignore  ONEDRIVE_PROCESSING.md  README.md  SCHEDULING_GUIDE.md  force_onedrive_sync.ps1  pyproject.toml  requirements.txt  run_daily_processing.py  run_processing.bat
01_readmess/: FORMATTERS_API.md  REFACTORING_SUMMARY.md  SHAREPOINT_SETUP.md
bkw_automation/: __init__.py  catalog.py  config.py  formatters.py  processors.py  sharepoint_client.py  transformers.py  validators.py
