[tool.poetry]
name = "bkw-email-automation"
version = "0.1.0"
description = "BKW email automation: SharePoint data extraction, transformation, and email delivery"
authors = ["Sua Sandoval <sua.raziel.sandoval@gmail.com>"]
readme = "README.md"
packages = [{include = "bkw_automation"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
openpyxl = "^3.1.2"
office365-rest-python-client = "^2.5.0"
azure-identity = "^1.14.0"
azure-storage-blob = "^12.18.0"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
ipykernel = "^7.1.0"
black = "^25.12.0"
flake8 = "^7.3.0"
mypy = "^1.19.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
